test/fail/RecursivelyDefinedTypeWithBoundedQNoMeasure.ma
-- 2011-03-23

fun T : -(i : Size) -> Set
{ T i = [j < i] -> T j
}